fix: allow button text to wrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,11 +145,6 @@ main picture:not([class]) > img:not([class]) {
 
   @media (min-width: 22.5rem) {
     width: fit-content;
-    white-space: nowrap;
-  }
-
-  @media (min-width: 48rem) {
-    white-space: nowrap;
   }
 }
 
